Ajout attribut width et height au images

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <!-- bloc-0 -->
 <header aria-label="Header">
 	<div id="logo">
-			<a href="index.html"><img src="img/la-chouette-agence-min.png" alt="logo La Chouette Agence" height="40" /></a>
+			<a href="index.html"><img src="img/la-chouette-agence-min.png" alt="logo La Chouette Agence" width="386" height="40" /></a>
 		</div>
 		<nav class="navbar navbar-light navbar-expand-sm">
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#responsive" aria-expanded="true" aria-label="Toggle navigation">
@@ -58,7 +58,7 @@
 		<div class="container bloc-lg">
 			<div class="row tight-width-whitespace">
 				<div class="col-sm-12">
-					<img src="img/logo-min.png" class="center-block image-resize-mode" width="100" role="img" aria-label="Logo Chouette" alt="Logo La Chouette Agence" />
+					<img src="img/logo-min.png" class="center-block image-resize-mode" width="150" height="150" role="img" aria-label="Logo Chouette" alt="Logo La Chouette Agence" />
 					<div class="bg-banniere-texte">
 						<h1 class="text-center hero-bloc-text tc-white ">
 							La chouette agence.
@@ -174,7 +174,7 @@
 			</div>
 			<div class="row tight-width-whitespace portfolio-row">
 				<div class="col-sm-6">
-					<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img class="portphoto" src="img/1-min.jpg" role="img" alt="Magazines colorés ouverts" class="img-responsive portfolio-thumb" /></a>
+					<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img class="portphoto" src="img/1-min.jpg" width="270" height="270" role="img" alt="Magazines colorés ouverts" class="img-responsive portfolio-thumb" /></a>
 					<h2 class="mg-md text-center">
 						Refonte d'un site web pour un journal local
 					</h2>
@@ -183,7 +183,7 @@
 					</p>
 				</div>
 				<div class="col-sm-6">
-					<a href="#" data-lightbox="img/2-min.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img class="portphoto"src="img/2-min.jpg" class="img-responsive portfolio-thumb" role="img" alt="Photographe prenant une photo avec un appareil photo sur un trepied la nuit" /></a>
+					<a href="#" data-lightbox="img/2-min.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img class="portphoto"src="img/2-min.jpg" width="270" height="270" class="img-responsive portfolio-thumb" role="img" alt="Photographe prenant une photo avec un appareil photo sur un trepied la nuit" /></a>
 					<h2 class="mg-md text-center">
 						Création d'un site web pour photographes
 					</h2>
@@ -194,7 +194,7 @@
 			</div>
 			<div class="row tight-width-whitespace portfolio-row">
 				<div class="col-sm-6">
-					<a href="#" data-lightbox="img/3-min.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img class="portphoto"src="img/3-min.jpg" class="img-responsive portfolio-thumb" role="img" alt="Matériel professionel de photographie, d'enregistrement audio et vidéo avec un Macbook"/></a>
+					<a href="#" data-lightbox="img/3-min.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img class="portphoto"src="img/3-min.jpg" width="270" height="270" class="img-responsive portfolio-thumb" role="img" alt="Matériel professionel de photographie, d'enregistrement audio et vidéo avec un Macbook"/></a>
 					<h2 class="mg-md text-center">
 						Création d'un site internet pour un voyageur
 					</h2>
@@ -203,7 +203,7 @@
 					</p>
 				</div>
 				<div class="col-sm-6">
-					<a href="#" data-lightbox="img/4-min.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img class="portphoto"src="img/4-min.jpg" class="img-responsive portfolio-thumb" role="img" alt="Travail avec un Macbook et un iPad" /></a>
+					<a href="#" data-lightbox="img/4-min.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img class="portphoto"src="img/4-min.jpg" width="270" height="270" class="img-responsive portfolio-thumb" role="img" alt="Travail avec un Macbook et un iPad" /></a>
 					<h2 class="mg-md text-center">
 						Conception d'un site pour une agence de mariage
 					</h2>
